- pacman 3.1 compatibility

yaourt 0.8.9
- bugfix show new orphans after install/remove if installed pkgname contains
'-' (ie: f-spot)
- compatibility fix:
  - -Qt (http://bugs.archlinux.org/task/9144)
  - ignorepkg support
  - removed --rmdeps when building packages
- run testdb after each upgrade/remove/install
- install AUR dependencies with --asdeps
- support for --needed
- yaourt upgrades itself first then pacman

yaourt 0.8.10
- support -Si repository/packages syntax
- lockfile is /var/lib/pacman/db.lck since pacman 3.1
- honor DBPath from pacman.conf
- new option "DontNeedToPressEnter". If set to "no", you have to press enter
for Yes No question
(see man yaourtc)
- yaourt --backup file.tar.bz2 can restore a previous backup
- edit .install files when building packages from ABS or AUR

yaourt 0.8.11
- new options in yaourtrc to show last comments from AUR: 
LastCommentsOrder & LastCommentsNumber 
- asking the user to mount /boot before kernel upgrade

yaourt 0.8.12
- tmpdirectory in yaourtrc works again
- support for arch=('any')
- support for new AUR 1.5 (SAFE flag removed + compatibility fix)

yaourt 0.9.0
- pacstats rebirth with yaourt --stats
- first step for a libified yaourt
- bash completion include and fixed shebang to bash
(http://bugs.archlinux.fr/task/105)
- changed behavior: -Qdt replace -Qt as in pacman
- install a list of package with yaourt -S packagelist.txt
- --backupfile: query on a .tar.bz2 backup file (see man yaourt for details)
- fix for Unsupported packages with pkgver begins by an alpha character 
- new option --downgrade to revert a packages list from [testing] to stable packages


yaourt 0.9.1 (pending)
- some code rewrite for AUR (access by JSON RPC interface)
- yaourt -Su --aur now show packages flaged by another user as out of date
- bug fixed when building a package with text in name (like per-text-kakaso)
- new option ForceEnglish in yaourtrc
- fixed FS#110 yaourt -Sb don't refresh PKGBUILD if continue=on is set in
wgetrc 