@@ -1077,12 +1077,14 @@ INSTALLED_AFTER="$YAOURTTMPDIR/orphans/installed_after.$$"
 # search orphans before removing or upgrading
 pacman -Qt | awk '{print $1}' | sort > $ORPHANS_BEFORE
 # store package list before
-pacman -Q | awk '{print $1}' | sort > $INSTALLED_BEFORE
+pacman -Q | sort > "$INSTALLED_BEFORE.full"
+cat "$INSTALLED_BEFORE.full" | awk '{print $1}' > $INSTALLED_BEFORE
 }
-show_new_orphans (){
+show_new_orphans(){
 # search for new orphans after upgrading or after removing (exclude new installed package)
 pacman -Qt | awk '{print $1}' | sort > "$ORPHANS_AFTER.tmp"
-pacman -Q | awk '{print $1}' | sort > "$INSTALLED_AFTER"
+pacman -Q | sort > "$INSTALLED_AFTER.full"
+cat "$INSTALLED_AFTER.full" | awk '{print $1}'  > $INSTALLED_AFTER
 comm -1 -3 "$INSTALLED_BEFORE" "$INSTALLED_AFTER" > "$INSTALLED_AFTER.newonly"
 comm -2 -3 "$ORPHANS_AFTER.tmp" "$INSTALLED_AFTER.newonly" | awk '{print $1}' > $ORPHANS_AFTER
 
@@ -1092,8 +1094,16 @@ if [ ! -z "$neworphans" ]; then
 	plain "Packages that were installed as dependencies but are no longer required by any installed package:"
 	list "$neworphans"
 fi
+
 # testdb
 testdb
+
+# save original of backup files (pacnew/pacsave)
+if [ $AUTOSAVEBACKUPFILE -eq 1 ] && ! diff "$INSTALLED_BEFORE.full" "$INSTALLED_AFTER.full" > /dev/null; then
+	msg "Searching for original config files to save"
+	launch_with_su "pacdiffviewer --backup"
+fi
+
 }
 cleandatabase(){
 # Rercherche dans /var/lib/pacman/ les dépôts ayant été téléchargés
